@@ -85,10 +85,12 @@
 
     <build>
         <plugins>
-            <!-- Inherit parent's compiler config (incl. --enable-preview) since backend is compiled with it -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <parameters>true</parameters>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
